--- a/src/index.html
+++ b/src/index.html
@@ -3,22 +3,21 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Duoc Uc</title>
+  <title>Ionic App</title>
 
   <base href="/" />
 
   <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcPSQ3kTcHuPt_LYXcLbaD3tGYc1IBQIY"></script>
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqavWffRReaGGcfNxey_7P0R7_CmEDQZE    "></script>
 </head>
 
 <body>
